👲👫 Checkpoint ./index.html:65042766/980 ./.glitch-assets:65042766/2682

--- a/index.html
+++ b/index.html
@@ -154,10 +154,10 @@ var Tmax=10000;                        //MAX # OF MILLISECONDS BETWEEN PARAMETER
 //FLOATING IMAGE URLS FOR EACH IMAGE. ADD OR DELETE ENTRIES. KEEP ELEMENT NUMERICAL ORDER STARTING WITH "0" !!
 
 var floatimages=new Array();
-floatimages[0]='https://i.imgur.com/E5v5W.gif';
-floatimages[1]='https://i.imgur.com/qdFwpYs.gif';
-floatimages[2]='https://i.imgur.com/4BT0YDm.gif';
-floatimages[3]='https://i.imgur.com/qdFwpYs.gif';
+floatimages[0]='https://cdn.glitch.global/8213f64f-3b70-4da1-951b-ad518f43f914/6eNN.gif?v=1710305735145';
+floatimages[1]='https://cdn.glitch.global/8213f64f-3b70-4da1-951b-ad518f43f914/6kQy.gif?v=1710305735333';
+floatimages[2]='https://cdn.glitch.global/8213f64f-3b70-4da1-951b-ad518f43f914/6eNN.gif?v=1710305735145';
+floatimages[3]='https://cdn.glitch.global/8213f64f-3b70-4da1-951b-ad518f43f914/6kQy.gif?v=1710305735333';
 floatimages[4]='https://i.imgur.com/4BT0YDm.gif';
 floatimages[5]='https://i.imgur.com/qdFwpYs.gif';
 floatimages[6]='https://i.imgur.com/4BT0YDm.gif';
