🌉⛽️ Checkpoint ./index.html:65042766/4942

--- a/index.html
+++ b/index.html
@@ -17,21 +17,21 @@ body {
 
 
 @-webkit-keyframes background {
-  0% { background-color: #a0dbff; }
-  20% { background-color: #c1e7ff; }  
-  40% { background-color: #feffa0; }
-  60% { background-color: #ffd0e1; }
+  0% { background-color: #4d79ff; }
+  20% { background-color: #ff80d5; }  
+  40% { background-color: #99ff99; }
+  60% { background-color: #9999ff; }
   80% { background-color: #ffffff; } 
-  100% { background-color: #a0dbff; }
+  100% { background-color: #4d79ff; }
 }
 
 @keyframes background {
-  0% { background-color: #a0dbff; }
-  20% { background-color: #c1e7ff; }  
-  40% { background-color: #feffa0; }
-  60% { background-color: #ffd0e1; }
+  0% { background-color: #4d79ff; }
+  20% { background-color: #ff80d5; }  
+  40% { background-color: #99ff99; }
+  60% { background-color: #9999ff; }
   80% { background-color: #ffffff; } 
-  100% { background-color: #a0dbff; }
+  100% { background-color: #4d79ff; }
 }
 
 h1 {
@@ -157,16 +157,16 @@ var floatimages=new Array();
 floatimages[0]='https://cdn.glitch.global/8213f64f-3b70-4da1-951b-ad518f43f914/6eNN.gif?v=1710305735145';
 floatimages[1]='https://cdn.glitch.global/8213f64f-3b70-4da1-951b-ad518f43f914/6kQy.gif?v=1710305735333';
 floatimages[2]='https://cdn.glitch.global/8213f64f-3b70-4da1-951b-ad518f43f914/6eNN.gif?v=1710305735145';
-floatimages[3]='https://cdn.glitch.global/8213f64f-3b70-4da1-951b-ad518f43f914/6kQy.gif?v=1710305735333';
-floatimages[4]='https://i.imgur.com/4BT0YDm.gif';
-floatimages[5]='https://i.imgur.com/qdFwpYs.gif';
-floatimages[6]='https://i.imgur.com/4BT0YDm.gif';
-floatimages[7]='https://i.imgur.com/qdFwpYs.gif';
-floatimages[8]='https://i.imgur.com/4BT0YDm.gif';
-floatimages[9]='https://i.imgur.com/qdFwpYs.gif';
-floatimages[10]='https://i.imgur.com/4BT0YDm.gif';
-floatimages[11]='https://i.imgur.com/qdFwpYs.gif';
-floatimages[12]='https://i.imgur.com/4BT0YDm.gif';
+floatimages[3]='https://cdn.glitch.global/8213f64f-3b70-4da1-951b-ad518f43f914/tumblr_40f1e938a0bed10d4e9d122cae7b6e0d_b4e08ad7_400.webp?v=1710305529311';
+floatimages[4]='https://cdn.glitch.global/8213f64f-3b70-4da1-951b-ad518f43f914/6eNN.gif?v=1710305735145';
+floatimages[5]='https://cdn.glitch.global/8213f64f-3b70-4da1-951b-ad518f43f914/6eNN.gif?v=1710305735145';
+floatimages[6]='https://cdn.glitch.global/8213f64f-3b70-4da1-951b-ad518f43f914/6eNN.gif?v=1710305735145';
+floatimages[7]='https://cdn.glitch.global/8213f64f-3b70-4da1-951b-ad518f43f914/6eNN.gif?v=1710305735145';
+floatimages[8]='https://cdn.glitch.global/8213f64f-3b70-4da1-951b-ad518f43f914/6eNN.gif?v=1710305735145';
+floatimages[9]='https://cdn.glitch.global/8213f64f-3b70-4da1-951b-ad518f43f914/6eNN.gif?v=1710305735145';
+floatimages[10]='https://cdn.glitch.global/8213f64f-3b70-4da1-951b-ad518f43f914/6eNN.gif?v=1710305735145';
+floatimages[11]='https://cdn.glitch.global/8213f64f-3b70-4da1-951b-ad518f43f914/6eNN.gif?v=1710305735145';
+floatimages[12]='https://cdn.glitch.global/8213f64f-3b70-4da1-951b-ad518f43f914/tumblr_40f1e938a0bed10d4e9d122cae7b6e0d_b4e08ad7_400.webp?v=1710305529311';
 
 //*********DO NOT EDIT BELOW***********
 var NS4 = (navigator.appName.indexOf("Netscape")>=0 && parseFloat(navigator.appVersion) >= 4 && parseFloat(navigator.appVersion) < 5)? true : false;
