--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-  <title>a butterfly goes</title>
+  <title>leah kim website</title>
   <head>
     
   <script> var scroll = setInterval(function(){ window.scrollBy(0,1); }, 100); </script>
@@ -69,82 +69,21 @@ a:active {
 <body data-new-gr-c-s-check-loaded="14.1160.0" data-gr-ext-installed="">
 <div align="center" style="position: center; padding: 200px;">
 <div id="feature" style="width: 500px; padding: 50 50 50 50; text-align: left">
-a butterfly<br><br>
-goes<br><br>
-where the salt is<br><br><br><br>
-licks<br>
-the sweat<br><br>
-from skin<br><br><br><br>
-when i was eighteen you and i bought monarch caterpillars off the internet<br><br>
-they came in a jar, packed next to their own food <br><br>
-they were fat, little, striped green and black<br><br><br><br><br><br>
-for days, we watched them crawl around a mesh tent that had been sent to us<br><br><br><br><br><br>
-one day you called me over to see that they had all turned into pupae<br><br>
-green jade hanging from the ceiling of the tent<br><br><br><br><br><br>
-annie dillard describes a moth emerging from its chrysalis—hot, she says it was<br><br>
-shaking in her hands<br><br><br><br><br><br>
-the ruined moth didn’t have enough room to spread its wings, they hardened, crystallized<br><br><br><br><br><br>
-you want to trust a living thing, sometimes you try to touch it<br><br><br><br><br><br><br><br>
-the butterflies emerged, one at a time, none of them dead<br><br><br><br><br><br><br><br>
-they fluttered around the mesh tent, we felt sorry, we unzipped it and they careened<br><br>
-around your dorm<br><br><br><br>
-knocking against<br><br>
-the windows<br><br><br><br><br><br><br><br>
-a butterfly<br><br>
-goes<br><br>
-where the salt is<br><br><br><br><br><br>
-licks<br><br><br><br>
-the sweat<br><br>
-from skin<br><br><br><br><br><br>
-i put my hand out and they landed<br><br>
-ticklish<br><br>
-bristly body tiny legs<br><br><br><br>
-very light<br><br><br><br>
-i thought i was magic, that they loved me<br><br><br><br><br><br>
-you want an animal to trust you, don’t you?<br><br><br><br><br><br><br><br>
-it wasn’t love but they ate<br><br><br><br><br><br><br><br>
-we didn’t know how else to feed them<br><br><br><br><br><br>
-we didn’t think of letting them go<br><br><br><br><br><br><br><br>
+Hello<br><br>
+i'm leah<br><br>
+This is my website<br><br><br><br><br><br><br><br>
+ABCDEFG<br>
+HIJKLMNOPQRSTUVWS<br><br>
 
-when they died<br><br>
-because of course they died<br><br>
-because everything dies<br><br><br><br><br><br>
-we kept their bodies intact<br><br><br><br><br><br>
-and used them in art<br><br><br><br>
 
-you took pictures of me<br><br>
-the scales<br>
-came off in my hands<br><br><br><br>
-
-little dust<br><br><br><br>
-
-like something from a distant planet<br><br><br><br>
-
-and then what—<br><br><br><br>
-
-i forget what happened<br><br><br><br>
-
-we grew up<br><br><br><br><br><br>
-
-and distant<br><br><br><br>
-
-we got<br>
-hot and away from each other<br><br><br><br><br><br><br><br>
-
-you live somewhere else now<br><br>
-
-i live somewhere else too<br><br><br><br><br><br><br><br>
-
-  <div style="text-align:right; width:500px">Larissa Pham 2017<br><a href="/poem-club">home</a></div>
+  <div style="text-align:right; width:500px">LEAH KIM<br><a href="/poem-club">NEXT PAGE</a></div>
 </div>
 </div>
   
 <script language="JavaScript1.2">
 
 /*
-Flying Butterfly script (By BGAudioDr@aol.com)
-Modified slightly/ permission granted to Dynamic Drive to feature script in archive
-For full source, visit http://www.dynamicdrive.com
+
 */
 
 var Ymax=8;                                //MAX # OF PIXEL STEPS IN THE "X" DIRECTION
@@ -283,10 +222,7 @@ window.onload=init;
 window.onresize=function(){ wind_w=getwindowwidth(); wind_h=getwindowheight(); }
 }
 
-</script><div id="pic0" style="position: absolute; visibility: visible; width: 10px; height: 10px; z-index: 1000; left: 6px; top: 4350px;"><img src="https://i.imgur.com/4BT0YDm.gif" name="p0" border="0"></div><div id="pic1" style="position: absolute; visibility: visible; width: 10px; height: 10px; z-index: 1000; left: 3px; top: 4059px;"><img src="https://i.imgur.com/qdFwpYs.gif" name="p1" border="0"></div><div id="pic2" style="position: absolute; visibility: visible; width: 10px; height: 10px; z-index: 1000; left: 2px; top: 4334px;"><img src="https://i.imgur.com/4BT0YDm.gif" name="p2" border="0"></div><div id="pic3" style="position: absolute; visibility: visible; width: 10px; height: 10px; z-index: 1000; left: 4px; top: 4241px;"><img src="https://i.imgur.com/qdFwpYs.gif" name="p3" border="0"></div><div id="pic4" style="position: absolute; visibility: visible; width: 10px; height: 10px; z-index: 1000; left: 5px; top: 3885px;"><img src="https://i.imgur.com/4BT0YDm.gif" name="p4" border="0"></div><div id="pic5" style="position: absolute; visibility: visible; width: 10px; height: 10px; z-index: 1000; left: 10px; top: 4172px;"><img src="https://i.imgur.com/qdFwpYs.gif" name="p5" border="0"></div><div id="pic6" style="position: absolute; visibility: visible; width: 10px; height: 10px; z-index: 1000; left: 2px; top: 4033px;"><img src="https://i.imgur.com/4BT0YDm.gif" name="p6" border="0"></div><div id="pic7" style="position: absolute; visibility: visible; width: 10px; height: 10px; z-index: 1000; left: 11px; top: 3869px;"><img src="https://i.imgur.com/qdFwpYs.gif" name="p7" border="0"></div><div id="pic8" style="position: absolute; visibility: visible; width: 10px; height: 10px; z-index: 1000; left: 1px; top: 4365px;"><img src="https://i.imgur.com/4BT0YDm.gif" name="p8" border="0"></div><div id="pic9" style="position: absolute; visibility: visible; width: 10px; height: 10px; z-index: 1000; left: 7px; top: 4006px;"><img src="https://i.imgur.com/qdFwpYs.gif" name="p9" border="0"></div><div id="pic10" style="position: absolute; visibility: visible; width: 10px; height: 10px; z-index: 1000; left: 5px; top: 3971px;"><img src="https://i.imgur.com/4BT0YDm.gif" name="p10" border="0"></div><div id="pic11" style="position: absolute; visibility: visible; width: 10px; height: 10px; z-index: 1000; left: 1px; top: 3940px;"><img src="https://i.imgur.com/qdFwpYs.gif" name="p11" border="0"></div><div id="pic12" style="position: absolute; visibility: visible; width: 10px; height: 10px; z-index: 1000; left: 2px; top: 3884px;"><img src="https://i.imgur.com/4BT0YDm.gif" name="p12" border="0"></div>
-
-
-
+  </script>
 </body>
   
 </html>
