🎯🌪 Checkpoint ./index.html:65042766/121

--- a/index.html
+++ b/index.html
@@ -69,11 +69,11 @@ a:active {
 <body data-new-gr-c-s-check-loaded="14.1160.0" data-gr-ext-installed="">
 <div align="center" style="position: center; padding: 200px;">
 <div id="feature" style="width: 500px; padding: 50 50 50 50; text-align: left">
-Hello<br><br>
-i'm leah<br><br>
-This is my website<br><br><br><br><br><br><br><br>
-ABCDEFG<br>
-HIJKLMNOPQRSTUVWS<br><br>
+BONJOUR<br><br>
+HI<br><br>
+Konnichiwa<br><br><br><br><br><br><br><br>
+GutenTag<br>
+Anyounghaseyo<br><br>
 
 
   <div style="text-align:right; width:500px">LEAH KIM<br><a href="/poem-club">NEXT PAGE</a></div>
