🌦🍬 Checkpoint ./index.html:65042766/1392

--- a/index.html
+++ b/index.html
@@ -69,11 +69,13 @@ a:active {
 <body data-new-gr-c-s-check-loaded="14.1160.0" data-gr-ext-installed="">
 <div align="center" style="position: center; padding: 200px;">
 <div id="feature" style="width: 500px; padding: 50 50 50 50; text-align: left">
-BONJOUR<br><br>
-HI<br><br>
-Konnichiwa<br><br><br><br><br><br><br><br>
-GutenTag<br>
-Anyounghaseyo<br><br>
+hi<br><br>
+i'm leah<br><br>
+this would be a journal to my world<br><br><br><br><br><br><br><br>
+a random assortment of things I enjoyed<br>
+a mess for aesthetic<br><br>
+yes<br><br>
+bye<br><br>
 
 
   <div style="text-align:right; width:500px">LEAH KIM<br><a href="/poem-club">NEXT PAGE</a></div>
@@ -94,9 +96,9 @@ var Tmax=10000;                        //MAX # OF MILLISECONDS BETWEEN PARAMETER
 
 var floatimages=new Array();
 floatimages[0]='https://cdn.glitch.global/8213f64f-3b70-4da1-951b-ad518f43f914/6eNN.gif?v=1710305735145';
-floatimages[1]='https://cdn.glitch.global/8213f64f-3b70-4da1-951b-ad518f43f914/6kQy.gif?v=1710305735333';
+floatimages[1]='https://cdn.glitch.global/8213f64f-3b70-4da1-951b-ad518f43f914/6eNN.gif?v=1710305735145';
 floatimages[2]='https://cdn.glitch.global/8213f64f-3b70-4da1-951b-ad518f43f914/6eNN.gif?v=1710305735145';
-floatimages[3]='https://cdn.glitch.global/8213f64f-3b70-4da1-951b-ad518f43f914/tumblr_40f1e938a0bed10d4e9d122cae7b6e0d_b4e08ad7_400.webp?v=1710305529311';
+floatimages[3]='https://cdn.glitch.global/8213f64f-3b70-4da1-951b-ad518f43f914/6eNN.gif?v=1710305735145';
 floatimages[4]='https://cdn.glitch.global/8213f64f-3b70-4da1-951b-ad518f43f914/6eNN.gif?v=1710305735145';
 floatimages[5]='https://cdn.glitch.global/8213f64f-3b70-4da1-951b-ad518f43f914/6eNN.gif?v=1710305735145';
 floatimages[6]='https://cdn.glitch.global/8213f64f-3b70-4da1-951b-ad518f43f914/6eNN.gif?v=1710305735145';
@@ -105,7 +107,7 @@ floatimages[8]='https://cdn.glitch.global/8213f64f-3b70-4da1-951b-ad518f43f914/6
 floatimages[9]='https://cdn.glitch.global/8213f64f-3b70-4da1-951b-ad518f43f914/6eNN.gif?v=1710305735145';
 floatimages[10]='https://cdn.glitch.global/8213f64f-3b70-4da1-951b-ad518f43f914/6eNN.gif?v=1710305735145';
 floatimages[11]='https://cdn.glitch.global/8213f64f-3b70-4da1-951b-ad518f43f914/6eNN.gif?v=1710305735145';
-floatimages[12]='https://cdn.glitch.global/8213f64f-3b70-4da1-951b-ad518f43f914/tumblr_40f1e938a0bed10d4e9d122cae7b6e0d_b4e08ad7_400.webp?v=1710305529311';
+floatimages[12]='https://cdn.glitch.global/8213f64f-3b70-4da1-951b-ad518f43f914/6eNN.gif?v=1710305735145';
 
 //*********DO NOT EDIT BELOW***********
 var NS4 = (navigator.appName.indexOf("Netscape")>=0 && parseFloat(navigator.appVersion) >= 4 && parseFloat(navigator.appVersion) < 5)? true : false;
