🐓🚕 Checkpoint ./index.html:65042766/30

--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@ body {
 }
 
 h1 {
-    color: black;
+    color: white;
     text-align: center;
 }
 
 body {
-    font-family: Times;
-    font-size: 24px;
+    font-family: Arial;
+    font-size: 18px;
     background: #333;
 }
 
@@ -69,7 +69,7 @@ a:active {
 <body data-new-gr-c-s-check-loaded="14.1160.0" data-gr-ext-installed="">
 <div align="center" style="position: center; padding: 200px;">
 <div id="feature" style="width: 500px; padding: 50 50 50 50; text-align: left">
-hi<br><br>
+hi there<br><br>
 i'm leah<br><br>
 this would be a journal to my world<br><br><br><br><br><br><br><br>
 a random assortment of things I enjoyed<br>
