🚓📡 Checkpoint ./index.html:65042766/863

--- a/index.html
+++ b/index.html
@@ -71,11 +71,12 @@ a:active {
 <div id="feature" style="width: 500px; padding: 50 50 50 50; text-align: left">
 hi there<br><br>
 i'm leah<br><br>
-this would be a journal to my world<br><br><br><br><br><br><br><br>
-a random assortment of things I enjoyed<br>
+this will serve as a journal of my world<br><br><br><br><br><br><br><br>
+a random assortment of things I've enjoyed<br>
 a mess for aesthetic<br><br>
-yes<br><br>
-bye<br><br>
+yes, indeed<br><br>
+goodbye<br><br>
+  
 
 
   <div style="text-align:right; width:500px">LEAH KIM<br><a href="/poem-club">NEXT PAGE</a></div>
