👩🚕 Checkpoint ./index.html:65042766/947

--- a/index.html
+++ b/index.html
@@ -69,12 +69,22 @@ a:active {
 <body data-new-gr-c-s-check-loaded="14.1160.0" data-gr-ext-installed="">
 <div align="center" style="position: center; padding: 200px;">
 <div id="feature" style="width: 500px; padding: 50 50 50 50; text-align: left">
-hi there<br><br>
-i'm leah<br><br>
-this will serve as a journal of my world<br><br><br><br><br><br><br><br>
-a random assortment of things I've enjoyed<br>
-a mess for aesthetic<br><br>
-yes, indeed<br><br>
+HI THERE !@#<br><br>
+i'm leah ᕕ( ᐛ )ᕗ<br><br><br><br>
+this will serve as a journal of my world<br><br><br><br>
+a random assortment of things I've enjoyed<br><br><br>
+a mess for aesthetic<br><br><br>
+I couldn't imagine myself coding and creating a website at beginning<br><br><br>
+HTML, CSS, Javascript— they stressed me out<br><br><br>
+but hey, I'm giving it my all<br><br><br>
+why are there always red errors all the time?<br><br><br>
+what did I do wrong?<br><br><br>
+what are all these signs and symptoms?<br><br><br>
+Then it leads to other questions: questioning my existence<br><br><br>
+what am I here for?<br><br><br>
+what am I doing?<br><br><br><br><br>
+existential crisis level: coding<br><br><br><br><br>
+anyway, welcome !<br><br><br>
 goodbye<br><br>
   
 
