🎃🚖 Checkpoint ./index.html:65042766/189

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ h1 {
 
 body {
     font-family: Arial;
-    font-size: 18px;
+    font-size: 17px;
     background: #333;
 }
 
@@ -89,7 +89,7 @@ goodbye<br><br>
   
 
 
-  <div style="text-align:right; width:500px">LEAH KIM<br><a href="/poem-club">NEXT PAGE</a></div>
+  <div style="text-align:right; width:500px">amazing<br><a href="/poem-club">NEXT PAGE</a></div>
 </div>
 </div>
   
